@@ -1,0 +1,7 @@
+include ChangeLog
+include demo.py
+include LICENSE
+include Makefile
+include MANIFEST.in
+include README.txt
+include ToDo
